update the  Project

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             </div>
 
             <div class="cta-buttons">
-                <a href="#contact" class="btn btn-outline">CONTACT ME 📧</a>
-                <a href="#resume" class="btn btn-gradient">GET RESUME ⬇</a>
+                <a href="#contact" class="btn btn-outline">CONTACT ME</a>
+                <a href="#resume" class="btn btn-gradient">GET RESUME</a>
             </div>
         </div>
 
@@ -112,9 +112,8 @@
         <h2 class="section-title">Who I am</h2>
         <div class="about-container">
             <div class="about-content">
-                <h2>I'm a passionate full-stack developer</h2>
-                <p>with experience in new and advanced problem-solving techniques. I love to open the world of my core
-                    skills based on JavaScript and do the most wonderful things.</p>
+                <h2>I'm a passionate WordPress developer</h2>
+                <p>WordPress developer passionate about creating websites that actually work for businesses. I've built responsive websites across various industries, transforming Figma designs into functional WordPress websites using Elementor. I focus on making sites fast, search-friendly, and easy to manage. My toolkit includes HTML, CSS, JavaScript, PHP, and MySQL for custom development work. Whether it's setting up online stores, connecting APIs, or providing ongoing support, I enjoy solving technical challenges and delivering solutions that clients love.</p>
                 <a href="#" class="btn btn-gradient mt-4">Get Resume</a>
             </div>
             <img src="https://imgs.search.brave.com/kIsC-n-wM8G-5tJMsvSLUpVgV6yeSymwlC1WYpQ7BFI/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly90My5m/dGNkbi5uZXQvanBn/LzA5LzU3LzE2LzEy/LzM2MF9GXzk1NzE2/MTIyNF9BNjR6ZGl0/cWlnRWNzNkUwanZ3/elZ6Rjd4WWNMTjdO/aS5qcGc"
