--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Devananthan - Web Developer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
     <nav>
         <div class="logo"><a href="/">Devfolio</a></div>
-        <ul class="nav-links">
+        <button class="menu-toggle" id="menuToggle" aria-label="Toggle menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+        <ul class="nav-links" id="navLinks">
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#experience">EXPERIENCE</a></li>
             <li><a href="#skills">SKILLS</a></li>
@@ -78,7 +85,7 @@
             <div class="code-content">
                 <span class="code-line"><span class="keyword">const</span> <span class="variable">coder</span> <span
                         class="operator">=</span> {</span>
-                <span class="code-line"> <span class="property">name:</span> <span class="string">'Deva'</span>,</span>
+                <span class="code-line"> <span class="property">name:</span> <span class="string">'Devananthan'</span>,</span>
                 <span class="code-line"> <span class="property">skills:</span>[<span class="string">'HTML'</span>, <span
                         class="string">'CSS'</span>, <span class="string">'WordPress'</span>, <span
                         class="string">'JavaScripts'</span>, <span class="string">'Elementor'</span>,</span>
@@ -112,8 +119,13 @@
         <h2 class="section-title">Who I am</h2>
         <div class="about-container">
             <div class="about-content">
-                <h2>I'm a passionate WordPress developer</h2>
-                <p>WordPress developer passionate about creating websites that actually work for businesses. I've built responsive websites across various industries, transforming Figma designs into functional WordPress websites using Elementor. I focus on making sites fast, search-friendly, and easy to manage. My toolkit includes HTML, CSS, JavaScript, PHP, and MySQL for custom development work. Whether it's setting up online stores, connecting APIs, or providing ongoing support, I enjoy solving technical challenges and delivering solutions that clients love.</p>
+                <h2>I'm A Passionate Wordpress Developer</h2>
+                <p>WordPress developer passionate about creating websites that actually work for businesses. I've built
+                    responsive websites across various industries, transforming Figma designs into functional WordPress
+                    websites using Elementor. I focus on making sites fast, search-friendly, and easy to manage. My
+                    toolkit includes HTML, CSS, JavaScript, PHP, and MySQL for custom development work. Whether it's
+                    setting up online stores, connecting APIs, or providing ongoing support, I enjoy solving technical
+                    challenges and delivering solutions that clients love.</p>
                 <a href="#" class="btn btn-gradient mt-4">Get Resume</a>
             </div>
             <img src="https://imgs.search.brave.com/kIsC-n-wM8G-5tJMsvSLUpVgV6yeSymwlC1WYpQ7BFI/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly90My5m/dGNkbi5uZXQvanBn/LzA5LzU3LzE2LzEy/LzM2MF9GXzk1NzE2/MTIyNF9BNjR6ZGl0/cWlnRWNzNkUwanZ3/elZ6Rjd4WWNMTjdO/aS5qcGc"
@@ -424,11 +436,11 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Developer by Deva. All rights reserved.</p>
+        <p>&copy; 2025 Developed by Deva. All rights reserved.</p>
     </footer>
 
-    <link rel="stylesheet" href="assets/js/scripts.js">
-
+    <script src="assets/js/scripts.js"></script>
+    
 </body>
 
 </html>
