--- a/projects-detailes.html
+++ b/projects-detailes.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Powered Financial App - Dev</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
+
 <body>
     <nav>
-        <div class="logo">Dev</div>
-        <ul class="nav-links">
-            <li><a href="index.html#about">ABOUT</a></li>
-            <li><a href="index.html#experience">EXPERIENCE</a></li>
-            <li><a href="index.html#skills">SKILLS</a></li>
-            <li><a href="index.html#education">EDUCATION</a></li>
-            <li><a href="index.html#blogs">BLOGS</a></li>
-            <li><a href="index.html#projects">PROJECTS</a></li>
-            <li><a href="index.html#contact">CONTACT</a></li>
+        <div class="logo"><a href="/">Devfolio</a></div>
+        <button class="menu-toggle" id="menuToggle" aria-label="Toggle menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+        <ul class="nav-links" id="navLinks">
+            <li><a href="#about">ABOUT</a></li>
+            <li><a href="#experience">EXPERIENCE</a></li>
+            <li><a href="#skills">SKILLS</a></li>
+            <li><a href="#education">EDUCATION</a></li>
+            <li><a href="#blogs">BLOGS</a></li>
+            <li><a href="projects.html">PROJECTS</a></li>
+            <li><a href="#contact">CONTACT</a></li>
         </ul>
     </nav>
 
@@ -28,7 +36,8 @@
                 <span class="highlight-pink">Financial App</span><br>
                 Project Details
             </h1>
-            <p>AI/ML-powered financial model trained on data from Google Sheets and generates PDF reports. A full-stack application designed for efficient financial analysis and reporting.</p>
+            <p>AI/ML-powered financial model trained on data from Google Sheets and generates PDF reports. A
+                full-stack application designed for efficient financial analysis and reporting.</p>
             <div class="cta-buttons">
                 <a href="#" class="btn btn-gradient">Live Demo</a>
                 <a href="#" class="btn btn-outline">View Code</a>
@@ -42,12 +51,16 @@
                 <div class="window-control green"></div>
             </div>
             <div class="code-content">
-                <span class="code-line"><span class="keyword">const</span> <span class="variable">AI</span> <span class="operator">=</span> <span class="string">'Financial App'</span>;</span>
-                <span class="code-line"><span class="comment">// Full-stack Financial App API with AI/ML</span></span>
+                <span class="code-line"><span class="keyword">const</span> <span class="variable">AI</span> <span
+                        class="operator">=</span> <span class="string">'Financial App'</span>;</span>
+                <span class="code-line"><span class="comment">// Full-stack Financial App API with
+                        AI/ML</span></span>
                 <span class="code-line"><span class="function">trainModel</span>(dataFromSheets);</span>
                 <span class="code-line"><span class="function">generatePDF</span>(reports);</span>
-                <span class="code-line"><span class="function">analyzeData</span>(<span class="property">financialMetrics</span>);</span>
-                <span class="code-line"><span class="function">exportReport</span>(<span class="string">'PDF'</span>);</span>
+                <span class="code-line"><span class="function">analyzeData</span>(<span
+                        class="property">financialMetrics</span>);</span>
+                <span class="code-line"><span class="function">exportReport</span>(<span
+                        class="string">'PDF'</span>);</span>
             </div>
         </div>
     </div>
@@ -57,7 +70,10 @@
         <h2 class="section-title">Project Overview</h2>
         <div class="about-container">
             <div class="about-content">
-                <p>This full-stack financial application leverages AI and machine learning to process data from Google Sheets, perform predictive analysis, and automatically generate comprehensive PDF reports. It's built for businesses needing quick insights into financial trends and forecasting.</p>
+                <p>This full-stack financial application leverages AI and machine learning to process data from
+                    Google Sheets, perform predictive analysis, and automatically generate comprehensive PDF
+                    reports. It's built for businesses needing quick insights into financial trends and forecasting.
+                </p>
                 <h2>Key Features</h2>
                 <ul>
                     <li><i class="fas fa-check-circle"></i> Data ingestion from Google Sheets API</li>
@@ -67,7 +83,8 @@
                     <li><i class="fas fa-check-circle"></i> Real-time data visualization using React</li>
                 </ul>
             </div>
-            <img src="https://thumbs.dreamstime.com/b/coding-software-developer-work-augmented-reality-dashboard-computer-icons-coding-software-developer-work-augmented-122745638.jpg" alt="Financial App Dashboard" class="about-img">
+            <img src="https://thumbs.dreamstime.com/b/coding-software-developer-work-augmented-reality-dashboard-computer-icons-coding-software-developer-work-augmented-122745638.jpg"
+                alt="Financial App Dashboard" class="about-img">
         </div>
     </section>
 
@@ -150,22 +167,8 @@
     <footer>
         <p>&copy; 2025 Developer by Deva. All rights reserved.</p>
     </footer>
-    
-    <script>
-        // Simple smooth scroll for nav links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
-                if (target) {
-                    target.scrollIntoView({
-                        behavior: 'smooth'
-                    });
-                } else {
-                    window.location.href = this.getAttribute('href');
-                }
-            });
-        });
-    </script>
+
+    <script src="assets/js/scripts.js"></script>
 </body>
+
 </html>
