--- a/projects.html
+++ b/projects.html
@@ -13,13 +13,18 @@
 <body>
     <nav>
         <div class="logo"><a href="/">Devfolio</a></div>
-        <ul class="nav-links">
+        <button class="menu-toggle" id="menuToggle" aria-label="Toggle menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+        <ul class="nav-links" id="navLinks">
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#experience">EXPERIENCE</a></li>
             <li><a href="#skills">SKILLS</a></li>
             <li><a href="#education">EDUCATION</a></li>
             <li><a href="#blogs">BLOGS</a></li>
-            <li><a href="project.html">PROJECTS</a></li>
+            <li><a href="projects.html">PROJECTS</a></li>
             <li><a href="#contact">CONTACT</a></li>
         </ul>
     </nav>
@@ -28,7 +33,9 @@
     <section id="projects" class=" container py-5 " style="margin-top: 80px;">
         <div class="my-projects">
             <h2>My Projects</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi cum quo nemo recusandae facilis magnam illo hic quidem dolores, ea facere deserunt, tenetur ad. Repellendus libero cumque nemo quia dignissimos?</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi cum quo nemo recusandae facilis
+                magnam illo hic quidem dolores, ea facere deserunt, tenetur ad. Repellendus libero cumque nemo quia
+                dignissimos?</p>
         </div>
         <div class="row g-4">
             <!-- Project 1 -->
@@ -121,7 +128,7 @@
         <p>&copy; 2025 Developer by Deva. All rights reserved.</p>
     </footer>
 
-    <link rel="stylesheet" href="assets/js/scripts.js">
+    <script src="assets/js/scripts.js"></script>
 
 </body>
 
