--- a/index.html
+++ b/index.html
@@ -34,39 +34,25 @@
             <h1>
                 Hello,<br>
                 This is <span class="highlight-pink">Deva</span>, I'm a<br>
-                Professional <span class="highlight-cyan">WordPress Developer</span>
+                Professional <br><span class="highlight-cyan"></span>
             </h1>
 
+
             <div class="social-icons">
-                <a href="#" aria-label="GitHub">
-                    <svg viewBox="0 0 24 24">
-                        <path
-                            d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
-                    </svg>
+                <a href="https://github.com/devananthans" aria-label="GitHub">
+                    <i class="fab fa-github"></i>
                 </a>
-                <a href="#" aria-label="LinkedIn">
-                    <svg viewBox="0 0 24 24">
-                        <path
-                            d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
-                    </svg>
+                <a href="https://www.linkedin.com/in/devananthans" aria-label="LinkedIn">
+                    <i class="fab fa-linkedin"></i>
                 </a>
-                <a href="#" aria-label="Facebook">
-                    <svg viewBox="0 0 24 24">
-                        <path
-                            d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z" />
-                    </svg>
+                <a href="https://www.reddit.com/user/s_deva_official/" aria-label="Reddit">
+                    <i class="fab fa-reddit"></i>
                 </a>
-                <a href="#" aria-label="Dribbble">
-                    <svg viewBox="0 0 24 24">
-                        <path
-                            d="M12 24c6.627 0 12-5.373 12-12s-5.373-12-12-12-12 5.373-12 12 5.373 12 12 12zm-2.678-18.943c1.846 2.371 3.549 5.258 4.794 8.29-2.98.888-5.844 1.149-8.834.702.426-4.017 2.12-7.455 4.04-8.992zm-3.619 10.262c3.392.509 6.519.201 9.773-.922.504 1.035.974 2.11 1.387 3.223-3.764 1.559-6.435 4.552-7.933 8.269-2.75-1.858-4.599-4.936-4.877-8.492.564-.051 1.124-.09 1.65-.078zm9.297 9.681c1.262-3.383 3.534-6.183 6.683-7.714.975 2.556 1.524 5.336 1.524 8.244 0 .746-.041 1.48-.118 2.201-2.399-.956-4.883-1.702-7.448-2.152-.214-.196-.427-.389-.641-.579zm8.678-10.157c-3.484 1.377-6.022 4.149-7.554 7.635-2.374-.444-4.742-1.096-7.039-1.949-.416-1.124-.894-2.213-1.411-3.265 3.692 1.286 7.599 1.487 11.484.579.716-.145 1.423-.329 2.122-.546.13.52.244 1.043.344 1.568.02-.009.038-.017.054-.022z" />
-                    </svg>
-                </a>
-                <a href="#" aria-label="Twitter">
-                    <svg viewBox="0 0 24 24">
-                        <path
-                            d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z" />
-                    </svg>
+                <!-- <a href="#" aria-label="Dribbble">
+                        <i class="fab fa-dribbble"></i>
+                    </a> -->
+                <a href="https://medium.com/@devananthans" aria-label="Medium">
+                    <i class="fab fa-medium"></i>
                 </a>
             </div>
 
@@ -85,7 +71,8 @@
             <div class="code-content">
                 <span class="code-line"><span class="keyword">const</span> <span class="variable">coder</span> <span
                         class="operator">=</span> {</span>
-                <span class="code-line"> <span class="property">name:</span> <span class="string">'Devananthan'</span>,</span>
+                <span class="code-line"> <span class="property">name:</span> <span
+                        class="string">'Devananthan'</span>,</span>
                 <span class="code-line"> <span class="property">skills:</span>[<span class="string">'HTML'</span>, <span
                         class="string">'CSS'</span>, <span class="string">'WordPress'</span>, <span
                         class="string">'JavaScripts'</span>, <span class="string">'Elementor'</span>,</span>
@@ -400,35 +387,20 @@
                 </div>
 
                 <div class="social-icons">
-                    <a href="#" aria-label="GitHub">
-                        <svg viewBox="0 0 24 24">
-                            <path
-                                d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
-                        </svg>
+                    <a href="https://github.com/devananthans" aria-label="GitHub">
+                        <i class="fab fa-github"></i>
                     </a>
-                    <a href="#" aria-label="LinkedIn">
-                        <svg viewBox="0 0 24 24">
-                            <path
-                                d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
-                        </svg>
+                    <a href="https://www.linkedin.com/in/devananthans" aria-label="LinkedIn">
+                        <i class="fab fa-linkedin"></i>
                     </a>
-                    <a href="#" aria-label="Facebook">
-                        <svg viewBox="0 0 24 24">
-                            <path
-                                d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z" />
-                        </svg>
+                    <a href="https://www.reddit.com/user/s_deva_official/" aria-label="Reddit">
+                        <i class="fab fa-reddit"></i>
                     </a>
-                    <a href="#" aria-label="Dribbble">
-                        <svg viewBox="0 0 24 24">
-                            <path
-                                d="M12 24c6.627 0 12-5.373 12-12s-5.373-12-12-12-12 5.373-12 12 5.373 12 12 12zm-2.678-18.943c1.846 2.371 3.549 5.258 4.794 8.29-2.98.888-5.844 1.149-8.834.702.426-4.017 2.12-7.455 4.04-8.992zm-3.619 10.262c3.392.509 6.519.201 9.773-.922.504 1.035.974 2.11 1.387 3.223-3.764 1.559-6.435 4.552-7.933 8.269-2.75-1.858-4.599-4.936-4.877-8.492.564-.051 1.124-.09 1.65-.078zm9.297 9.681c1.262-3.383 3.534-6.183 6.683-7.714.975 2.556 1.524 5.336 1.524 8.244 0 .746-.041 1.48-.118 2.201-2.399-.956-4.883-1.702-7.448-2.152-.214-.196-.427-.389-.641-.579zm8.678-10.157c-3.484 1.377-6.022 4.149-7.554 7.635-2.374-.444-4.742-1.096-7.039-1.949-.416-1.124-.894-2.213-1.411-3.265 3.692 1.286 7.599 1.487 11.484.579.716-.145 1.423-.329 2.122-.546.13.52.244 1.043.344 1.568.02-.009.038-.017.054-.022z" />
-                        </svg>
-                    </a>
-                    <a href="#" aria-label="Twitter">
-                        <svg viewBox="0 0 24 24">
-                            <path
-                                d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z" />
-                        </svg>
+                    <!-- <a href="#" aria-label="Dribbble">
+                        <i class="fab fa-dribbble"></i>
+                    </a> -->
+                    <a href="https://medium.com/@devananthans" aria-label="Medium">
+                        <i class="fab fa-medium"></i>
                     </a>
                 </div>
             </div>
@@ -440,7 +412,44 @@
     </footer>
 
     <script src="assets/js/scripts.js"></script>
-    
+    <script>
+        const textArray = ["WordPress Developer", "Web Developer", "Full Stack Developer"];
+        const typingSpeed = 100; // milliseconds per letter
+        const erasingSpeed = 60;
+        const delayBetweenWords = 1500; // pause before deleting
+
+        const typedTextSpan = document.querySelector(".highlight-cyan");
+        let textArrayIndex = 0;
+        let charIndex = 0;
+
+        function type() {
+            if (charIndex < textArray[textArrayIndex].length) {
+                typedTextSpan.textContent += textArray[textArrayIndex].charAt(charIndex);
+                charIndex++;
+                setTimeout(type, typingSpeed);
+            } else {
+                setTimeout(erase, delayBetweenWords);
+            }
+        }
+
+        function erase() {
+            if (charIndex > 0) {
+                typedTextSpan.textContent = textArray[textArrayIndex].substring(0, charIndex - 1);
+                charIndex--;
+                setTimeout(erase, erasingSpeed);
+            } else {
+                textArrayIndex++;
+                if (textArrayIndex >= textArray.length) textArrayIndex = 0;
+                setTimeout(type, typingSpeed);
+            }
+        }
+
+        // start the typing effect
+        document.addEventListener("DOMContentLoaded", () => {
+            if (textArray.length) setTimeout(type, 500);
+        });
+    </script>
+
 </body>
 
 </html>
