CSS Bugs Update

--- a/index.html
+++ b/index.html
@@ -28,79 +28,81 @@
             <li><a href="#contact">CONTACT</a></li>
         </ul>
     </nav>
+    <div class="hero-section">
+        <div class="hero-container">
+            <div class="hero-content">
+                <h1>
+                    Hello,<br>
+                    This is <span class="highlight-pink">Deva</span>, I'm a<br>
+                    Professional <br><span class="highlight-cyan"></span>
+                </h1>
 
-    <div class="hero-container">
-        <div class="hero-content">
-            <h1>
-                Hello,<br>
-                This is <span class="highlight-pink">Deva</span>, I'm a<br>
-                Professional <br><span class="highlight-cyan"></span>
-            </h1>
 
-
-            <div class="social-icons">
-                <a href="https://github.com/devananthans" aria-label="GitHub">
-                    <i class="fab fa-github"></i>
-                </a>
-                <a href="https://www.linkedin.com/in/devananthans" aria-label="LinkedIn">
-                    <i class="fab fa-linkedin"></i>
-                </a>
-                <a href="https://www.reddit.com/user/s_deva_official/" aria-label="Reddit">
-                    <i class="fab fa-reddit"></i>
-                </a>
-                <!-- <a href="#" aria-label="Dribbble">
+                <div class="social-icons">
+                    <a href="https://github.com/devananthans" aria-label="GitHub">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/devananthans" aria-label="LinkedIn">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="https://www.reddit.com/user/s_deva_official/" aria-label="Reddit">
+                        <i class="fab fa-reddit"></i>
+                    </a>
+                    <!-- <a href="#" aria-label="Dribbble">
                         <i class="fab fa-dribbble"></i>
                     </a> -->
-                <a href="https://medium.com/@devananthans" aria-label="Medium">
-                    <i class="fab fa-medium"></i>
-                </a>
+                    <a href="https://medium.com/@devananthans" aria-label="Medium">
+                        <i class="fab fa-medium"></i>
+                    </a>
+                </div>
+
+                <div class="cta-buttons">
+                    <a href="#contact" class="btn btn-outline">CONTACT ME</a>
+                    <a href="#resume" class="btn btn-gradient">GET RESUME</a>
+                </div>
             </div>
 
-            <div class="cta-buttons">
-                <a href="#contact" class="btn btn-outline">CONTACT ME</a>
-                <a href="#resume" class="btn btn-gradient">GET RESUME</a>
-            </div>
-        </div>
-
-        <div class="code-window">
-            <div class="window-controls">
-                <div class="window-control red"></div>
-                <div class="window-control yellow"></div>
-                <div class="window-control green"></div>
-            </div>
-            <div class="code-content">
-                <span class="code-line"><span class="keyword">const</span> <span class="variable">coder</span> <span
-                        class="operator">=</span> {</span>
-                <span class="code-line"> <span class="property">name:</span> <span
-                        class="string">'Devananthan'</span>,</span>
-                <span class="code-line"> <span class="property">skills:</span>[<span class="string">'HTML'</span>, <span
-                        class="string">'CSS'</span>, <span class="string">'WordPress'</span>, <span
-                        class="string">'JavaScripts'</span>, <span class="string">'Elementor'</span>,</span>
-                <span class="code-line"> <span class="string">'WooCommerce'</span>, <span class="string">'MYSQL'</span>,
-                    <span class="string">'Figma'</span>, <span class="string">'PHP'</span>, <span
-                        class="string">'Python'</span>],</span>
-                <span class="code-line"> <span class="property">hardWorker:</span> <span
-                        class="boolean">true</span>,</span>
-                <span class="code-line"> <span class="property">quickLearner:</span> <span
-                        class="boolean">true</span>,</span>
-                <span class="code-line"> <span class="property">problemSolver:</span> <span
-                        class="boolean">true</span>,</span>
-                <span class="code-line"> <span class="property">hireable:</span> <span
-                        class="function">function</span>() {</span>
-                <span class="code-line"> <span class="keyword">return</span> (</span>
-                <span class="code-line"> <span class="this">this</span>.smartWorker <span
-                        class="operator">&&</span></span>
-                <span class="code-line"> <span class="this">this</span>.problemSolver <span
-                        class="operator">&&</span></span>
-                <span class="code-line"> <span class="this">this</span>.skills.length <span class="operator">>=</span>
-                    <span class="number">5</span></span>
-                <span class="code-line"> );</span>
-                <span class="code-line"> }</span>
-                <span class="code-line">};</span>
+            <div class="code-window">
+                <div class="window-controls">
+                    <div class="window-control red"></div>
+                    <div class="window-control yellow"></div>
+                    <div class="window-control green"></div>
+                </div>
+                <div class="code-content">
+                    <span class="code-line"><span class="keyword">const</span> <span class="variable">coder</span> <span
+                            class="operator">=</span> {</span>
+                    <span class="code-line"> <span class="property">name:</span> <span
+                            class="string">'Devananthan'</span>,</span>
+                    <span class="code-line"> <span class="property">skills:</span>[<span class="string">'HTML'</span>,
+                        <span class="string">'CSS'</span>, <span class="string">'WordPress'</span>, <span
+                            class="string">'JavaScripts'</span>, <span class="string">'Elementor'</span>,</span>
+                    <span class="code-line"> <span class="string">'WooCommerce'</span>, <span
+                            class="string">'MYSQL'</span>,
+                        <span class="string">'Figma'</span>, <span class="string">'PHP'</span>, <span
+                            class="string">'Python'</span>],</span>
+                    <span class="code-line"> <span class="property">hardWorker:</span> <span
+                            class="boolean">true</span>,</span>
+                    <span class="code-line"> <span class="property">quickLearner:</span> <span
+                            class="boolean">true</span>,</span>
+                    <span class="code-line"> <span class="property">problemSolver:</span> <span
+                            class="boolean">true</span>,</span>
+                    <span class="code-line"> <span class="property">hireable:</span> <span
+                            class="function">function</span>() {</span>
+                    <span class="code-line"> <span class="keyword">return</span> (</span>
+                    <span class="code-line"> <span class="this">this</span>.smartWorker <span
+                            class="operator">&&</span></span>
+                    <span class="code-line"> <span class="this">this</span>.problemSolver <span
+                            class="operator">&&</span></span>
+                    <span class="code-line"> <span class="this">this</span>.skills.length <span
+                            class="operator">>=</span>
+                        <span class="number">5</span></span>
+                    <span class="code-line"> );</span>
+                    <span class="code-line"> }</span>
+                    <span class="code-line">};</span>
+                </div>
             </div>
         </div>
     </div>
-
     <!-- About Section -->
     <section id="about">
         <h2 class="section-title">Who I am</h2>
@@ -413,7 +415,7 @@
 
     <script src="assets/js/scripts.js"></script>
     <script>
-        const textArray = ["WordPress Developer", "Web Developer", "Full Stack Developer"];
+        const textArray = ["Web Developer", "Data Scientist", "Full-stack Developer"];
         const typingSpeed = 100; // milliseconds per letter
         const erasingSpeed = 60;
         const delayBetweenWords = 1500; // pause before deleting
