--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 
     <script src="assets/js/scripts.js"></script>
     <script>
-        const textArray = ["Web Developer", "Data Scientist", "Full-stack Developer"];
+        const textArray = ["Web Developer"];
         const typingSpeed = 100; // milliseconds per letter
         const erasingSpeed = 60;
         const delayBetweenWords = 1500; // pause before deleting
