--- a/projects-detailes.html
+++ b/projects-detailes.html
@@ -19,13 +19,13 @@
             <span></span>
         </button>
         <ul class="nav-links" id="navLinks">
-            <li><a href="#about">ABOUT</a></li>
-            <li><a href="#experience">EXPERIENCE</a></li>
-            <li><a href="#skills">SKILLS</a></li>
-            <li><a href="#education">EDUCATION</a></li>
-            <li><a href="#blogs">BLOGS</a></li>
+            <li><a href="index.html#about">ABOUT</a></li>
+            <li><a href="index.html#experience">EXPERIENCE</a></li>
+            <li><a href="index.html#skills">SKILLS</a></li>
+            <li><a href="index.html#education">EDUCATION</a></li>
+            <li><a href="index.html#blogs">BLOGS</a></li>
             <li><a href="projects.html">PROJECTS</a></li>
-            <li><a href="#contact">CONTACT</a></li>
+            <li><a href="index.html#contact">CONTACT</a></li>
         </ul>
     </nav>
 
