--- a/index.html
+++ b/index.html
@@ -36,8 +36,6 @@
                     This is <span class="highlight-pink">Deva</span>, I'm a<br>
                     Professional <br><span class="highlight-cyan"></span>
                 </h1>
-
-
                 <div class="social-icons">
                     <a href="https://github.com/devananthans" aria-label="GitHub">
                         <i class="fab fa-github"></i>
@@ -48,9 +46,6 @@
                     <a href="https://www.reddit.com/user/s_deva_official/" aria-label="Reddit">
                         <i class="fab fa-reddit"></i>
                     </a>
-                    <!-- <a href="#" aria-label="Dribbble">
-                        <i class="fab fa-dribbble"></i>
-                    </a> -->
                     <a href="https://medium.com/@devananthans" aria-label="Medium">
                         <i class="fab fa-medium"></i>
                     </a>
@@ -80,7 +75,7 @@
                             class="string">'MYSQL'</span>,
                         <span class="string">'Figma'</span>, <span class="string">'PHP'</span>, <span
                             class="string">'Python'</span>],</span>
-                    <span class="code-line"> <span class="property">hardWorker:</span> <span
+                    <span class="code-line"> <span class="property">smartWorker:</span> <span
                             class="boolean">true</span>,</span>
                     <span class="code-line"> <span class="property">quickLearner:</span> <span
                             class="boolean">true</span>,</span>
@@ -122,7 +117,7 @@
         </div>
     </section>
 
-    <!-- Experience Section -->
+    <!-- Experience Section-->
     <section id="experience" style="background: rgba(142, 22, 22, 0.1);">
         <h2 class="section-title">Experiences</h2>
         <div class="experience-grid">
@@ -144,6 +139,7 @@
         </div>
     </section>
 
+
     <!-- Skills Section -->
     <section id="skills">
         <h2 class="section-title">Skills</h2>
@@ -153,32 +149,28 @@
                 <p>HTML</p>
             </div>
             <div class="skill-item">
-                <i class="fab fa-css3-alt"></i>
+                <i class="fab fa-css3"></i>
                 <p>CSS</p>
             </div>
             <div class="skill-item">
                 <i class="fab fa-js-square"></i>
-                <p>JS</p>
+                <p>JavaScript</p>
             </div>
             <div class="skill-item">
-                <i class="fas fa-file-code"></i>
-                <p>TS</p>
+                <i class="fas fa-wordpress" aria-hidden="true"></i>
+                <p>WordPress</p>
             </div>
             <div class="skill-item">
-                <i class="fab fa-react"></i>
-                <p>React</p>
+                <i class="fab fa-php"></i>
+                <p>PHP</p>
             </div>
             <div class="skill-item">
-                <i class="fas fa-arrow-right"></i>
-                <p>Next JS</p>
+                <i class="fas fa-bootstarp"></i>
+                <p>Bootstrap</p>
             </div>
             <div class="skill-item">
-                <i class="fas fa-wind"></i>
-                <p>Tailwind</p>
-            </div>
-            <div class="skill-item">
-                <i class="fab fa-node-js"></i>
-                <p>Node</p>
+                <i class="fas fa-git"></i>
+                <p>version control</p>
             </div>
         </div>
     </section>
