--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 
     <script src="assets/js/scripts.js"></script>
     <script>
-        const textArray = ["Web Developer"];
+        const textArray = ["Web Developer", "WordPress"];
         const typingSpeed = 100; // milliseconds per letter
         const erasingSpeed = 60;
         const delayBetweenWords = 1500; // pause before deleting
