--- a/projects-detailes.html
+++ b/projects-detailes.html
@@ -165,7 +165,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Developer by Deva. All rights reserved.</p>
+        <p>&copy; 2025 Developed by Deva. All rights reserved.</p>
     </footer>
 
     <script src="assets/js/scripts.js"></script>
