--- a/projects.html
+++ b/projects.html
@@ -226,7 +226,7 @@
 
 
     <footer>
-        <p>&copy; 2025 Developer by Deva. All rights reserved.</p>
+        <p>&copy; 2025 Developed by Deva. All rights reserved.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
