--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="#skills">SKILLS</a></li>
             <li><a href="#education">EDUCATION</a></li>
             <li><a href="#blogs">BLOGS</a></li>
-            <li><a href="projects.php">PROJECTS</a></li>
+            <li><a href="projects.html">PROJECTS</a></li>
             <li><a href="#contact">CONTACT</a></li>
         </ul>
     </nav>
