--- a/projects.html
+++ b/projects.html
@@ -57,10 +57,10 @@
                     <!-- Project 1 -->
                     <div class="col-lg-4 col-md-6">
                         <div class="card h-100 shadow-sm">
-                            <img src="https://images.unsplash.com/photo-1603791440384-56cd371ee9a7?w=800"
+                            <img src="assets/img/projects/amazingadds.png"
                                 class="card-img-top" alt="Web App Dashboard">
                             <div class="card-body d-flex flex-column">
-                                <h5 class="card-title">Analytics Dashboard</h5>
+                                <h5 class="card-title">Amazingadds</h5>
                                 <p class="card-text flex-grow-1">A responsive dashboard built with React and Chart.js.
                                 </p>
                                 <a href="#" class="btn btn-gradient mt-auto">View Project</a>
@@ -70,7 +70,7 @@
                     <!-- Project 2 -->
                     <div class="col-lg-4 col-md-6">
                         <div class="card h-100 shadow-sm">
-                            <img src="https://images.unsplash.com/photo-1581092334446-4c19f6afab09?w=800"
+                            <img src="assets/img/projects/raagamplus.png"
                                 class="card-img-top" alt="Portfolio Website">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Portfolio Website</h5>
